# genderize-stage-0

./: .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml
app/services/: genderize.py
app/utils/: exceptions.py  responses.py
