[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage-zero"
version = "0.1.0"
description = "Stage 0 Genderize API integration with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.1",
  "httpx==0.28.1",
  "uvicorn[standard]==0.38.0",
]

[tool.setuptools]
py-modules = ["main"]
